新增thymeleaf页面代码复用fragment

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,8 +27,8 @@
 <body>
 <div id="wrapper">
     <!--菜单栏-->
-    <nav class="navbar-default navbar-static-side" role="navigation">
-        <div class="sidebar-collapse">
+    <nav class="navbar-default navbar-static-side" role="navigation" th:fragment="navModal">
+        <div class="sidebar-collapse" >
             <ul class="nav" id="side-menu">
                 <li class="nav-header">
 
@@ -183,7 +183,7 @@
 
     <div id="page-wrapper" class="gray-bg dashbard-1">
         <!--顶部栏-->
-        <div class="row border-bottom">
+        <div class="row border-bottom" th:fragment="navBorderTop">
             <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
                 <div class="navbar-header">
                     <a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
@@ -451,7 +451,7 @@
             </div>
         </div>
         <!--尾部栏-->
-        <div class="footer">
+        <div class="footer" th:fragment="footer">
             <div class="pull-right">
                 By：<a href="https://blog.csdn.net/qq_15708851/article/details/80858682" target="_blank">Mathew's blog</a>
             </div>
