新增群聊模式

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -44,16 +44,16 @@
                             </span>
                         </a>
                         <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                            <li><a href="form_avatar.html">修改头像</a>
+                            <li><a href="form_avatar">修改头像</a>
                             </li>
-                            <li><a href="profile.html">个人资料</a>
+                            <li><a href="profile">个人资料</a>
                             </li>
-                            <li><a href="contacts.html">联系我们</a>
+                            <li><a href="contacts">联系我们</a>
                             </li>
-                            <li><a href="mailbox.html">信箱</a>
+                            <li><a href="ws">信箱</a>
                             </li>
                             <li class="divider"></li>
-                            <li><a href="login.html">安全退出</a>
+                            <li><a href="sign/out">安全退出</a>
                             </li>
                         </ul>
                     </div>
@@ -161,17 +161,15 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="ws">
                         <i class="fa fa-bullhorn"></i>
-                        <span class="nav-label">消息管理</span>
-                        <span class="fa arrow"></span>
+                        <span class="nav-label">聊天通讯</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
                         <i class="fa fa-cog"></i>
                         <span class="nav-label">设备管理</span>
-                        <span class="fa arrow"></span>
                     </a>
                 </li>
             </ul>
@@ -233,7 +231,7 @@
                             <li class="divider"></li>
                             <li>
                                 <div class="text-center link-block">
-                                    <a href="mailbox.html">
+                                    <a href="ws">
                                         <i class="fa fa-envelope"></i>  <strong> 查看所有消息</strong>
                                     </a>
                                 </div>
@@ -265,7 +263,7 @@
                             <li class="divider"></li>
                             <li>
                                 <div class="text-center link-block">
-                                    <a href="notifications">
+                                    <a href="ws">
                                         <strong>查看所有 </strong>
                                         <i class="fa fa-angle-right"></i>
                                     </a>
