--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -3,7 +3,8 @@
 <head>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="renderer" content="webkit">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="renderer" content="webkit">
 
     <title>后台管理系统</title>
     <meta name="keywords" content="后台bootstrap框架,会员中心主题,后台HTML,响应式后台">
