--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -59,10 +59,10 @@
                     </div>
 
                 </li>
-                <li class="active">
+                <li class="active index">
                     <a href="index"><i class="fa fa-th-large"></i> <span class="nav-label">首页</span></a>
                 </li>
-                <li>
+                <li class="sys">
                     <a href="#">
                         <i class="fa fa-laptop"></i>
                         <span class="nav-label">系统管理 </span>
@@ -81,7 +81,7 @@
                         </li>
                     </ul>
                 </li>
-                <li>
+                <li class="config">
                     <a href="#">
                         <i class="fa fa-wrench"></i>
                         <span class="nav-label">配置管理</span>
@@ -160,7 +160,7 @@
                         <span class="fa arrow"></span>
                     </a>
                 </li>
-                <li>
+                <li class="chart">
                     <a href="ws">
                         <i class="fa fa-bullhorn"></i>
                         <span class="nav-label">聊天通讯</span>
@@ -194,7 +194,7 @@
                 </div>
                 <ul class="nav navbar-top-links navbar-right">
                     <li>
-                        <span class="m-r-sm text-muted welcome-message"><a href="index.html" title="返回首页"><i class="fa fa-home"></i></a>欢迎使用后台管理系统</span>
+                        <span class="m-r-sm text-muted welcome-message"><a href="index" title="返回首页"><i class="fa fa-home"></i></a>欢迎使用后台管理系统</span>
                     </li>
                     <li class="dropdown">
                         <a class="dropdown-toggle count-info" data-toggle="dropdown" href="index">
@@ -222,7 +222,7 @@
                                     </a>
                                     <div class="media-body ">
                                         <small class="pull-right text-navy">25小时前</small>
-                                        <strong>国民岳父</strong> 这是一条测试信息
+                                        <strong>admin</strong> 这是一条测试信息
                                         <br>
                                         <small class="text-muted">昨天</small>
                                     </div>
@@ -496,7 +496,7 @@
 
 <!-- Sparkline demo data  -->
 <script th:src="@{js/demo/sparkline-demo.js}"></script>
-
+<script th:src="@{js/config.js}"></script>
 <script>
     $(document).ready(function () {
 
